# es-fluent

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .typos.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  bench.md  codecov.yaml  justfile  package.json  pyproject.toml  rust-toolchain.toml  turbo.json
crates/es-fluent/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-build/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-build/docs/: ARCHITECTURE.md
crates/es-fluent-build/src/: error.rs  lib.rs
crates/es-fluent-cli/: CHANGELOG.md  Cargo.toml  README.md  action.yml
crates/es-fluent-cli-helpers/: Cargo.toml  README.md
crates/es-fluent-cli-helpers/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-cli-helpers/src/: cli.rs  generate.rs  lib.rs
crates/es-fluent-cli-helpers/tests/: run_entrypoints.rs
crates/es-fluent-cli/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-cli/src/: app_state.rs  consts.rs  core.rs  discovery.rs  error.rs  errors.rs  format.rs  generator.rs  lib.rs  main.rs  sync.rs  temp_crate.rs  templates.rs  tui.rs  types.rs  ui.rs  utils.rs  validate.rs  watcher.rs
crates/es-fluent-cli/templates/: Cargo.toml.jinja  MonolithicCargo.toml.jinja  check.rs.jinja  config.toml.jinja  generate.rs.jinja  main.rs.jinja  monolithic_main.rs.jinja
crates/es-fluent-cli/tests/: cli_tests.rs  main_smoke.rs
crates/es-fluent-core/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-core/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-core/src/: error.rs  lib.rs  meta.rs  namer.rs  registry.rs  strategy.rs  validation.rs
crates/es-fluent-core/tests/: analysis_tests.rs  derive_attributes_tests.rs  enum_kv_tests.rs  enum_mixed_variants_tests.rs  enum_skipped_variant_tests.rs  error_messages_tests.rs  json_snapshots_tests.rs  namer_and_registry_tests.rs  namer_tests.rs  options_parsing_tests.rs  struct_keys_tests.rs  struct_keys_this_more_fields_tests.rs  struct_kv_tests.rs  unnamed_item_snapshot_tests.rs  validation_tests.rs
crates/es-fluent-derive/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-derive-core/: Cargo.toml  README.md
crates/es-fluent-derive-core/docs/: ARCHITECTURE.md  TYPED_ATTRIBUTE_IR_PLAN.md  TYPE_SAFE_DX_REWORK_PLAN.md
crates/es-fluent-derive-core/src/: attribute.rs  context.rs  error.rs  expansion.rs  grammar.rs  index.rs  lib.rs  lowered.rs  macro_input.rs  macro_support.rs  namer.rs  namespace.rs  path_utils.rs  registry.rs  semantic.rs  validation.rs
crates/es-fluent-derive-core/tests/: validation_tests.rs
crates/es-fluent-derive/docs/: ARCHITECTURE.md  ATTRIBUTE_DX_PLAN.md  design.md
crates/es-fluent-derive/src/: lib.rs  snapshot_support.rs
crates/es-fluent-derive/tests/: derive_attributes_tests.rs  options_parsing_tests.rs  renamed_facade.rs  snapshot_support.rs  ui.rs  ui_namespace.rs  validation_tests.rs
crates/es-fluent-generate/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-generate/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-generate/src/: ast_build.rs  clean.rs  error.rs  formatting.rs  ftl.rs  io.rs  lib.rs  merge.rs  model.rs  pipeline.rs  tests.rs  value.rs
crates/es-fluent-generate/tests/: brittle_structure_test.rs  clean_mode_test.rs  complex_structure_test.rs  conservative_mode_tests.rs  generate_tests.rs
crates/es-fluent-lang/: CHANGELOG.md  Cargo.toml  README.md  build.rs  es-fluent-lang.ftl  generate.py
crates/es-fluent-lang-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-lang-macro/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-lang-macro/src/: lib.rs  supported_locales.rs
crates/es-fluent-lang-macro/tests/: renamed_dependencies.rs
crates/es-fluent-lang/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-lang/src/: lib.rs  tests.rs
crates/es-fluent-manager/: Cargo.toml  README.md
crates/es-fluent-manager-bevy/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-manager-bevy/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-manager-bevy/src/: assets.rs  components.rs  context.rs  extension.rs  lib.rs  locale.rs  plugin.rs  registration.rs  schedule.rs  systems.rs  test_support.rs  tests.rs
crates/es-fluent-manager-bevy/tests/: define_i18n_module_args.rs
crates/es-fluent-manager-core/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-manager-core/docs/: ARCHITECTURE.md  design.md
crates/es-fluent-manager-core/src/: asset_localization.rs  embedded_localization.rs  fallback.rs  lib.rs  localization.rs  static_localization.rs  static_resource.rs
crates/es-fluent-manager-dioxus/: Cargo.toml  README.md
crates/es-fluent-manager-dioxus-derive/: Cargo.toml  README.md
crates/es-fluent-manager-dioxus-derive/src/: lib.rs
crates/es-fluent-manager-dioxus/docs/: ARCHITECTURE.md
crates/es-fluent-manager-dioxus/src/: asset_loader.rs  bridge.rs  client.rs  error.rs  lib.rs  ssr.rs  (+2 more)
crates/es-fluent-manager-embedded/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-manager-generic/: Cargo.toml
crates/es-fluent-manager-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-manager-singleton/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-runner/: Cargo.toml  README.md
crates/es-fluent-sc-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/es-fluent-shared/: Cargo.toml  README.md
crates/es-fluent-toml/: CHANGELOG.md  Cargo.toml  README.md
examples/bevy-example/: CHANGELOG.md  Cargo.toml  index.html  trunk-init.js
examples/cfg_attr-example/: Cargo.toml  i18n.toml
examples/cosmic-example/: Cargo.toml  README.md  build.rs  justfile
web/: .gitignore  Cargo.toml  Dioxus.toml  astro.config.ts  consts.ts  i18n.toml  package.json  preview.ts  tsconfig.json  wasm-examples.json  wasm-examples.schema.json
web/assets/: site.css
web/public/: llms-full.txt  llms.txt
web/remark/: consts.ts  remark-rewrite-links.ts
web/src/: lib.rs  main.rs  util.ts  wasm-examples.ts
xtask/: Cargo.toml  README.md
xtask/docs/: ARCHITECTURE.md
xtask/src/: cli.rs  generate_lang_names.rs  main.rs  util.rs  wasm_examples.rs
xtask/templates/: llms-header.md
(+1355 files in other folders)
