[workspace]
members = [
  "crates/es-fluent",
  "crates/es-fluent-cli",
  "crates/es-fluent-cli-helpers",
  "crates/es-fluent-derive-core",
  "crates/es-fluent-toml",
  "crates/es-fluent-derive",
  "crates/es-fluent-generate",
  "crates/es-fluent-lang",
  "crates/es-fluent-lang-macro",
  "crates/es-fluent-manager-core",
  "crates/es-fluent-manager-macros",
  "crates/es-fluent-manager-embedded",
  "crates/es-fluent-manager-bevy",
  "examples/first-example",
  "examples/thiserror-example",
  "examples/example-shared-lib",
  "examples/feature-gated-example",
  "examples/bevy-example",
  "examples/gpui-example",
  "examples/readme",
  "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/es-fluent"
rust-version = "1.88"
version = "0.14.1"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.8"
askama = "0.15"
assert_cmd = "2.1"
assert_fs = "1.1"
bevy = "0.18"
blake3 = "1.8"
bon = "3.9"
cargo_metadata = "0.23"
clap = "4.5"
colored = "3.1"
crossterm = "0.29"
darling = "0.23"
derive_more = "2.1"
es-fluent = { path = "crates/es-fluent", version = "0.14.1" }
es-fluent-derive = { path = "crates/es-fluent-derive", version = "0.14.1" }
es-fluent-derive-core = { path = "crates/es-fluent-derive-core", version = "0.14.1" }
es-fluent-generate = { path = "crates/es-fluent-generate", version = "0.14.1" }
es-fluent-lang = { path = "crates/es-fluent-lang", version = "0.14.1" }
es-fluent-lang-macro = { path = "crates/es-fluent-lang-macro", version = "0.14.1" }
es-fluent-manager-bevy = { default-features = false, path = "crates/es-fluent-manager-bevy", version = "0.18.10" }
es-fluent-manager-core = { path = "crates/es-fluent-manager-core", version = "0.14.1" }
es-fluent-manager-embedded = { path = "crates/es-fluent-manager-embedded", version = "0.14.1" }
es-fluent-manager-macros = { path = "crates/es-fluent-manager-macros", version = "0.14.1" }
es-fluent-toml = { path = "crates/es-fluent-toml", version = "0.14.1" }
fluent-bundle = "0.16"
fluent-fallback = "0.7"
fluent-syntax = "0.12"
getset = "0.1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5" }
gpui_platform = { features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
], git = "https://github.com/zed-industries/zed", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
heck = "0.5"
icu = "2.1.1"
icu_collections = "2.1.1"
icu_experimental = "0.4.0"
icu_experimental_data = "0.4.1"
icu_locale = "2.1.1"
icu_locid = "2.0.0"
icu_plurals = "2.1.1"
icu_provider = "2.1.1"
icu_provider_blob = "2.1.1"
icu_provider_export = "2.1.1"
indexmap = "2.13"
indicatif = "0.18"
insta = { version = "1.46" }
intl-memoizer = "0.5"
inventory = "0.3"
jiff = "0.2"
mdbook-driver = "0.5"
miette = "7.6"
notify = "8.2"
notify-debouncer-full = "0.7"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
ratatui = "0.30"
rust-embed = "8.11"
serde = "1.0"
serde_json = "1.0"
similar = "2.7"
strum = "0.27"
syn = "2.0"
tempfile = "3"
terminal-link = "0.1"
thiserror = "2.0"
throbber-widgets-tui = "0.10"
toml = "1.0"
tracing = "0.1"
treelog = "0.0.6"
unic-langid = "0.9"
walkdir = "2.5"
zerovec = "0.11"

[replace]
"https://github.com/zed-industries/zed#gpui@0.2.2" = { git = "https://github.com/zed-industries/zed", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5" }

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"
