[workspace]
members = [
  "crates/es-fluent",
  "crates/es-fluent-build",
  "crates/es-fluent-cli",
  "crates/es-fluent-cli-helpers",
  "crates/es-fluent-runner",
  "crates/es-fluent-shared",
  "crates/es-fluent-derive-core",
  "crates/es-fluent-toml",
  "crates/es-fluent-derive",
  "crates/es-fluent-generate",
  "crates/es-fluent-lang",
  "crates/es-fluent-lang-macro",
  "crates/es-fluent-manager-core",
  "crates/es-fluent-manager-macros",
  "crates/es-fluent-manager-embedded",
  "crates/es-fluent-manager-bevy",
  "crates/es-fluent-manager-dioxus",
  "examples/example-shared-lib",
  "examples/bevy-example",
  "examples/gpui-example",
  "examples/readme",
  "web",
  "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/es-fluent"
rust-version = "1.96"
version = "0.18.1"

[workspace.dependencies]
anyhow = "1.0"
askama = "0.16"
assert_cmd = "2.2"
assert_fs = "1.1"
bevy = "0.19"
blake3 = "1.8"
bon = "3.9"
camino = "1.2"
cargo-manifest = "0.21"
cargo_metadata = "0.23"
clap = "4.6"
colored = "3.1"
crossbeam-channel = "0.5"
crossterm = "0.29"
darling = "0.23"
derive_more = "2.1"
dioxus = { default-features = false, version = "0.7" }
dioxus-core = { default-features = false, version = "0.7" }
dioxus-core-macro = { default-features = false, version = "0.7" }
dioxus-hooks = { default-features = false, version = "0.7" }
dioxus-signals = { default-features = false, version = "0.7" }
dioxus-ssr = { default-features = false, version = "0.7" }
es-fluent = { path = "crates/es-fluent", version = "0.18.1" }
es-fluent-build = { path = "crates/es-fluent-build", version = "0.18.1" }
es-fluent-derive = { path = "crates/es-fluent-derive", version = "0.18.1" }
es-fluent-derive-core = { path = "crates/es-fluent-derive-core", version = "0.18.1" }
es-fluent-generate = { path = "crates/es-fluent-generate", version = "0.18.1" }
es-fluent-lang = { path = "crates/es-fluent-lang", version = "0.18.1" }
es-fluent-lang-macro = { path = "crates/es-fluent-lang-macro", version = "0.18.1" }
es-fluent-manager-bevy = { default-features = false, path = "crates/es-fluent-manager-bevy", version = "0.19.2" }
es-fluent-manager-core = { default-features = false, path = "crates/es-fluent-manager-core", version = "0.18.1" }
es-fluent-manager-dioxus = { default-features = false, path = "crates/es-fluent-manager-dioxus", version = "0.7.3" }
es-fluent-manager-embedded = { path = "crates/es-fluent-manager-embedded", version = "0.18.1" }
es-fluent-manager-macros = { path = "crates/es-fluent-manager-macros", version = "0.18.1" }
es-fluent-runner = { path = "crates/es-fluent-runner", version = "0.18.1" }
es-fluent-shared = { path = "crates/es-fluent-shared", version = "0.18.1" }
es-fluent-toml = { path = "crates/es-fluent-toml", version = "0.18.1" }
fluent-bundle = "0.16"
fluent-fallback = "0.7"
fluent-syntax = "0.12"
fs-err = "3.3"
futures = "0.3"
getset = "0.1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "c545fb67d0ce13e335bff76f7c08986000333f2c" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui_platform = { features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
], git = "https://github.com/zed-industries/zed", rev = "c545fb67d0ce13e335bff76f7c08986000333f2c" }
heck = "0.5"
icu_experimental = "0.5"
icu_locale = "2.2"
indexmap = "2.14"
indicatif = "0.18"
insta = "1.48"
intl-memoizer = "0.5"
inventory = "0.3"
jiff = "0.2"
miette = "7.6"
notify = "8.2"
notify-debouncer-full = "0.7"
parking_lot = "0.12"
path-slash = "0.2"
predicates = "3.1"
prettyplease = "0.2"
proc-macro-crate = "3.5"
proc-macro2 = "1.0"
quote = "1.0"
ratatui = "0.30"
rstest = "0.26"
rust-embed = "8.11"
rustc-hash = "2.1"
serde = "1.0"
serde_json = "1.0"
serial_test = "3.5"
similar = "3.1"
stayhydated-dioxus = { git = "https://github.com/stayhydated/shared", rev = "efa89e741d33c39d1764daa87d878338ad6551d7" }
stayhydated-site = { git = "https://github.com/stayhydated/shared", rev = "efa89e741d33c39d1764daa87d878338ad6551d7" }
stayhydated-xtask = { git = "https://github.com/stayhydated/shared", rev = "efa89e741d33c39d1764daa87d878338ad6551d7" }
strum = "0.28"
syn = "2.0"
temp-env = "0.3"
tempfile = "3"
terminal-link = "0.1"
thiserror = "2.0"
throbber-widgets-tui = "0.11"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
treelog = "0.0.6"
trybuild = "1.0"
unic-langid = "0.9"
walkdir = "2.5"
wasm-bindgen = "0.2"
web = { path = "web" }
web-sys = "0.3"

[replace]
"https://github.com/zed-industries/zed#gpui@0.2.2" = { git = "https://github.com/zed-industries/zed", rev = "c545fb67d0ce13e335bff76f7c08986000333f2c" }

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[workspace.lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
unexpected_cfgs = { check-cfg = [ "cfg(coverage)" ], level = "deny" }
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
derive_partial_eq_without_eq = "warn"
err_expect = "warn"
incompatible_msrv = "deny"
iter_on_single_items = "warn"
needless_bool = "warn"
redundant_clone = "warn"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"
useless_conversion = "warn"
