[project]
dependencies = [
  "pydantic>=2.12.5",
  "pytest>=9.0.2",
  "requests>=2.32.5",
  "tomli>=2.0",
  "tomli-w>=1.0",
  "tqdm>=4.67.1",
  "typer[all]>=0.19.2",
]
description = "Add your description here"
name = "es-fluent"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.uv.workspace]
members = [ "scripts/cldr-es-fluent-lang" ]

[tool.pyright]
venv = ".venv"
venvPath = "."
