[package]
name = "web"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[features]
default = [  ]
server = [ "dioxus/server", "dep:dioxus-server" ]
web = [ "dioxus/web", "dioxus-motion/web" ]

[dependencies]
dioxus = { features = [ "router", "launch", "lib", "fullstack" ], workspace = true }
dioxus-motion = { features = [ "dioxus", "transitions" ], workspace = true }
dioxus-server = { optional = true, workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-lang = { features = [ "localized-langs" ], workspace = true }
es-fluent-manager-dioxus = { features = [ "client", "ssr" ], workspace = true }
rust-embed = { features = [ "debug-embed" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }
unic-langid = { workspace = true }

[build-dependencies]
es-fluent = { features = [ "build" ], workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
