[package]
name = "web"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[features]
default = [  ]
server = [ "dioxus/server", "dep:dioxus-server", "stayhydated-site/server" ]
web = [ "dioxus/web" ]

[dependencies]
dioxus = { features = [ "router", "launch", "lib", "fullstack" ], workspace = true }
dioxus-server = { optional = true, workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-dioxus = { features = [ "client", "ssr" ], workspace = true }
stayhydated-dioxus = { workspace = true }
stayhydated-site = { workspace = true }
strum = { features = [ "derive" ], workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
