[package]
name = "web"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[features]
default = [ "web" ]
web = [ "dioxus/web", "stayhydated-site/web" ]

[dependencies]
dioxus = { features = [ "router", "launch", "lib" ], workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-dioxus = { features = [ "client", "ssr" ], workspace = true }
stayhydated-dioxus = { workspace = true }
stayhydated-site = { workspace = true }
strum = { features = [ "derive" ], workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }

[lints]
workspace = true
