[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
mdbook-driver = { workspace = true }
schemars = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
