[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
mdbook-driver = { workspace = true }
path-slash = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
web = { workspace = true }
