[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
es-fluent-runner = { workspace = true }
es-fluent-shared = { workspace = true }
es-fluent-toml = { workspace = true }
stayhydated-xtask = { workspace = true }
web = { workspace = true }
