[package]
name = "es-fluent-build"
description = """
Build-script helpers for es-fluent locale asset tracking
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
es-fluent-toml = { workspace = true }

[dev-dependencies]
path-slash = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
