[package]
name = "es-fluent-cli-helpers"
description = """
Helper functions for es-fluent CLI runner crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
cargo_metadata = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
es-fluent = { workspace = true }
es-fluent-generate = { workspace = true }
es-fluent-toml = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
