[package]
name = "es-fluent-cli-helpers"
description = """
Helper functions for es-fluent CLI runner crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
cargo_metadata = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
es-fluent = { workspace = true }
es-fluent-generate = { workspace = true }
es-fluent-runner = { workspace = true }
es-fluent-shared = { workspace = true }
es-fluent-toml = { workspace = true }
fs-err = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
