[package]
name = "es-fluent-cli"
description = "CLI for es-fluent FTL file generation"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "es-fluent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
blake3 = { workspace = true }
cargo_metadata = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
es-fluent-generate = { workspace = true }
es-fluent-toml = { workspace = true }
fluent-syntax = { workspace = true }
glob = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
miette = { features = [ "fancy" ], workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
ratatui = { features = [ "crossterm" ], workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
throbber-widgets-tui = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }


[lints]
workspace = true
