[package]
name = "es-fluent-cli"
description = """
CLI for es-fluent
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
categories = [ "localization", "internationalization" ]
keywords = [ "fluent", "i18n", "locale" ]

[[bin]]
name = "cargo-es-fluent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
blake3 = { workspace = true }
cargo_metadata = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
es-fluent-derive-core = { workspace = true }
es-fluent-generate = { workspace = true }
es-fluent-toml = { workspace = true }
fluent-syntax = { workspace = true }
humantime = { workspace = true }
indexmap = { features = [ "serde" ], workspace = true }
indicatif = { workspace = true }
miette = { features = [ "fancy" ], workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
ratatui = { features = [ "crossterm" ], workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
terminal-link = { workspace = true }
thiserror = { workspace = true }
throbber-widgets-tui = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile.workspace = true


[lints]
workspace = true
