[package]
name = "es-fluent-core"
description = """
Core crate for multiple es-fluent-* crates
"""
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
darling = { workspace = true }
derive_more = { features = [ "full" ], workspace = true }
getset = { workspace = true }
heck = { workspace = true }
log = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }
syn = { features = [ "full" ], workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { features = [ "ron" ], workspace = true }
syn = { features = [ "full" ], workspace = true }
