[package]
name = "es-fluent-core"
description = """
Core crate for multiple es-fluent-* crates
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
inventory = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }

[dev-dependencies]
es-fluent-derive-core = { workspace = true }
insta = { workspace = true }
proc-macro2 = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
