[package]
name = "es-fluent-derive"
description = """
Derive crate for es-fluent
"""
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
es-fluent-core = { workspace = true }
getset = { workspace = true }
heck = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
