[package]
name = "es-fluent-generate"
description = """
A crate for generating .ftl files
"""
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
clap = { features = [ "derive" ], workspace = true }

es-fluent-core = { workspace = true }
fluent-syntax = { workspace = true }
heck = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
