[package]
name = "es-fluent-generate"
description = """
A crate for handling .ftl files
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
clap = { features = [ "derive" ], workspace = true }
colored = { workspace = true }
es-fluent-core = { workspace = true }
fluent-syntax = { workspace = true }
heck = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
