[package]
name = "es-fluent-lang-macro"
description = """
Macros crate for es-fluent-lang.
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
es-fluent-toml = { workspace = true }
heck = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
