[package]
name = "es-fluent-lang-macro"
description = """
Macros crate for es-fluent-lang.
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
es-fluent-manager-core = { workspace = true }
es-fluent-toml = { workspace = true }
heck = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }

[dev-dependencies]
insta = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }

[lints]
workspace = true
