[package]
name = "es-fluent-lang"
description = """icu4x based crate for adding variants to a Language Enum."""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"
categories = [ "localization", "internationalization" ]
keywords = [ "fluent", "i18n", "locale", "icu4x" ]
build = "build.rs"

[features]
bevy = [  ]
default = [ "macros" ]
localized-langs = [  ]
macros = [ "dep:es-fluent-lang-macro" ]

[dependencies]
es-fluent-lang-macro = { optional = true, workspace = true }
es-fluent-manager-core = { workspace = true }
fluent-bundle = { workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
