[package]
name = "es-fluent-manager-bevy"
description = """
es-fluent manager for Bevy
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.18.1"
readme = "README.md"

[features]
default = [ "macros", "file_watcher" ]
file_watcher = [ "bevy/file_watcher" ]
macros = [ "es-fluent-manager-macros" ]

[dependencies]
arc-swap = { workspace = true }
bevy = { workspace = true }
es-fluent = { workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-manager-macros = { optional = true, workspace = true }
fluent-bundle = { workspace = true }
intl-memoizer = { workspace = true }
inventory = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
unic-langid = { workspace = true }

[lints]
workspace = true
