[package]
name = "es-fluent-manager-core"
description = """
es-fluent manager core
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
es-fluent-derive-core = { workspace = true }
fluent-bundle = { workspace = true }
fluent-fallback = { workspace = true }
inventory = { workspace = true }
rust-embed = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }

[lints]
workspace = true
