[package]
name = "es-fluent-manager-core"
description = """
es-fluent manager core
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
es-fluent-shared = { workspace = true }
fluent-bundle = { workspace = true }
fluent-fallback = { workspace = true }
fluent-langneg = { workspace = true }
icu_locale = { workspace = true }
intl-memoizer = { workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }

[lints]
workspace = true
